<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondomoviestar"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="fill_parent"
        android:layout_height="55dp"
        android:layout_marginTop="68dp"
        android:layout_weight="1"
        android:background="#00AAE4"
        android:fontFamily="@font/chewy"
        android:gravity="center"
        android:text="MovieStar"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="38sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,TextContrastCheck" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="230dp"
        android:layout_height="89dp"
        android:gravity="center"
        android:shadowColor="@color/black"
        android:shadowRadius="8"
        android:text="@string/qu_acci_n_desea_realizar"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.281"
        tools:background="#00FFFFFF" />

    <Button
        android:id="@+id/agregarCliente"
        android:layout_width="196sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="82sp"
        android:layout_marginEnd="82sp"
        android:backgroundTint="#00AAE4"
        android:fontFamily="@font/chewy"
        android:gravity="center"
        android:shadowColor="@color/black"
        android:shadowRadius="6"
        android:text="@string/agregar_un_cliente"
        android:textSize="15sp"
        app:cornerRadius="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.32" />

    <Button
        android:id="@+id/consultarCostoDeUnCliente"
        android:layout_width="196sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="82sp"
        android:layout_marginEnd="82sp"
        android:backgroundTint="#00AAE4"
        android:fontFamily="@font/chewy"
        android:shadowColor="@color/black"
        android:shadowRadius="6"
        android:text="@string/consultar_costo_total_de_un_cliente"
        app:cornerRadius="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.686" />

    <Button
        android:id="@+id/consultarCostoTotal"
        android:layout_width="196sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="82sp"
        android:layout_marginEnd="82sp"
        android:backgroundTint="#00AAE4"
        android:fontFamily="@font/chewy"
        android:shadowColor="@color/black"
        android:shadowRadius="6"
        android:text="@string/consultar_costo_total_de_los_clientes"
        app:cornerRadius="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.781" />

    <Button
        android:id="@+id/botonsalir"
        android:layout_width="196sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="82sp"
        android:layout_marginEnd="82sp"
        android:backgroundTint="#00AAE4"
        android:fontFamily="@font/chewy"
        android:shadowColor="@color/black"
        android:shadowRadius="6"
        android:text="@string/salir"
        app:cornerRadius="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.86"
        tools:ignore="TextContrastCheck" />

    <include
        layout="@layout/drawle_layoutmenu"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/consultar_costo_total_de_los_clientes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

    </include>


</androidx.constraintlayout.widget.ConstraintLayout>