<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondollenardatos"
    android:orientation="vertical"
    android:id="@+id/frag_clientes_encontrados"
    app:layout_constraintTop_toTopOf="parent"
    tools:context=".MainActivity"
    app:navGraph="@navigation/nav_graph">

    <TextView
        android:id="@+id/textView"
        android:layout_width="fill_parent"
        android:layout_height="55dp"
        android:layout_marginTop="32dp"
        android:layout_weight="1"
        android:background="#00AAE4"
        android:fontFamily="@font/chewy"
        android:gravity="center"
        android:text="MovieStar"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="38sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,TextContrastCheck" />

    <TextView
        android:id="@+id/completarDatos"
        android:layout_width="290dp"
        android:layout_height="104dp"
        android:gravity="center"
        android:text="@string/datos_del_cliente"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        android:textStyle="bold|italic"
        android:shadowColor="@color/black"
        android:shadowRadius="12"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.263"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/botonVolver"
        android:layout_width="173dp"
        android:layout_height="71dp"
        android:backgroundTint="#00AAE4"
        android:fontFamily="@font/chewy"
        android:shadowColor="@color/black"
        android:shadowRadius="6"
        android:textSize="15sp"
        android:text="@string/volver"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.678" />

    <TextView
        android:id="@+id/costotaldelcliente"
        android:layout_width="271dp"
        android:layout_height="67dp"
        android:background="#A3FFFFFF"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/el_costo_total_del_cliente_es"
        android:textColor="#0E0E0E"
        android:textColorHint="#A4000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
